fixed badge alignment

--- a/app/ang_app/stylesheets/style.css
+++ b/app/ang_app/stylesheets/style.css
@@ -111,6 +111,7 @@ li{
 .badges{
   height: 70px;
   width: 70px;
+  display: flex;
 }
 .thumbNails{
   height: 20vh;
@@ -138,4 +139,7 @@ li{
 }
 .ng-leave-active {
   opacity: 0;
+}
+.left{
+  margin-left: 10%;
 }
